k8s/apps/otel-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: otel-collector
  labels:
    app: opentelemetry
spec:
  clusterIP: None # Headless service for DaemonSet
  ports:
    - name: metrics
      port: 8889
      targetPort: 8889
      protocol: TCP
  selector:
    app: opentelemetry
